--- a/SIREN_dockwidget_base.ui
+++ b/SIREN_dockwidget_base.ui
@@ -1,95 +1,105 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-    <class>SIRENDockWidgetBase</class>
-    <widget class="QDockWidget" name="SIRENDockWidgetBase">
-        <property name="geometry">
-            <rect>
-                <x>0</x>
-                <y>0</y>
-                <width>232</width>
-                <height>243</height>
-            </rect>
-        </property>
-        <property name="minimumSize">
-            <size>
-                <width>200</width>
-                <height>243</height>
-            </size>
-        </property>
-        <property name="windowTitle">
-            <string>SIREN</string>
-        </property>
-        <widget class="QWidget" name="dockWidgetContents">
-            <layout class="QVBoxLayout" name="verticalLayout_2">
-                <item alignment="Qt::AlignTop">
-                    <widget class="QGroupBox" name="databaseSelectorBox">
-                        <property name="minimumSize">
-                            <size>
-                                <width>0</width>
-                                <height>13</height>
-                            </size>
-                        </property>
-                        <property name="title">
-                            <string>Base de Données</string>
-                        </property>
-                        <layout class="QVBoxLayout" name="verticalLayout_4">
-                            <item>
-                                <widget class="QComboBox" name="databaseSelector">
-                                    <item>
-                                        <property name="text">
-                                            <string>DB 1</string>
-                                        </property>
-                                    </item>
-                                    <item>
-                                        <property name="text">
-                                            <string>DB 2</string>
-                                        </property>
-                                    </item>
-                                </widget>
-                            </item>
-                        </layout>
-                    </widget>
-                </item>
-                <item>
-                    <widget class="QGroupBox" name="positionsSelectorBox">
-                        <property name="title">
-                            <string>Affiche des positions</string>
-                        </property>
-                        <layout class="QVBoxLayout" name="verticalLayout_3">
-                            <item>
-                                <widget class="QCheckBox" name="checkBoxBrut">
-                                    <property name="text">
-                                        <string>Affiche brut</string>
-                                    </property>
-                                </widget>
-                            </item>
-                            <item>
-                                <widget class="QCheckBox" name="checkBoxCorrected">
-                                    <property name="text">
-                                        <string>Affichage corrigé</string>
-                                    </property>
-                                </widget>
-                            </item>
-                            <item>
-                                <widget class="QCheckBox" name="checkBoxDifference">
-                                    <property name="text">
-                                        <string>Affichage de la différence</string>
-                                    </property>
-                                </widget>
-                            </item>
-                        </layout>
-                    </widget>
-                </item>
-                <item alignment="Qt::AlignBottom">
-                    <widget class="QPushButton" name="liveButton">
-                        <property name="text">
-                            <string>Live</string>
-                        </property>
-                    </widget>
-                </item>
-            </layout>
+ <class>SIRENDockWidgetBase</class>
+ <widget class="QDockWidget" name="SIRENDockWidgetBase">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>232</width>
+    <height>243</height>
+   </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>200</width>
+    <height>243</height>
+   </size>
+  </property>
+  <property name="windowTitle">
+   <string>SIREN</string>
+  </property>
+  <widget class="QWidget" name="dockWidgetContents">
+   <layout class="QVBoxLayout" name="verticalLayout_2">
+    <item alignment="Qt::AlignTop">
+     <widget class="QGroupBox" name="databaseSelectorBox">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>13</height>
+       </size>
+      </property>
+      <property name="title">
+       <string>Base de Données</string>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout_4">
+       <item>
+        <widget class="QComboBox" name="databaseSelector">
+         <item>
+          <property name="text">
+           <string>DB 1</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>DB 2</string>
+          </property>
+         </item>
         </widget>
-    </widget>
-    <resources/>
-    <connections/>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item>
+     <widget class="QGroupBox" name="positionsSelectorBox">
+      <property name="title">
+       <string>Affiche des positions</string>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout_3">
+       <item>
+        <widget class="QCheckBox" name="checkBoxBrut">
+         <property name="text">
+          <string>Affiche brut</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="checkBoxCorrected">
+         <property name="text">
+          <string>Affichage corrigé</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="checkBoxDifference">
+         <property name="text">
+          <string>Affichage de la différence</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item alignment="Qt::AlignBottom">
+     <widget class="QPushButton" name="liveButton">
+      <property name="text">
+       <string>Live</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="resetButton">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="text">
+       <string>Reset</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+ </widget>
+ <resources/>
+ <connections/>
 </ui>
