--- a/SIREN_dockwidget_base.ui
+++ b/SIREN_dockwidget_base.ui
@@ -6,14 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>232</width>
-    <height>243</height>
+    <width>225</width>
+    <height>253</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>200</width>
-    <height>243</height>
+    <height>253</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>524287</width>
+    <height>253</height>
    </size>
   </property>
   <property name="windowTitle">
